// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CheckoutPageVanilla component should renders correctly pickup 1`] = `
<Fragment>
  <Styled(CnCTemplate)
    isCheckoutView={true}
    isConfirmationPage={false}
    leftSection={[Function]}
    marginTop={true}
    orderLedgerAfterView={false}
    pageCategory="pickup"
    showLeftSection={true}
  />
</Fragment>
`;

exports[`CheckoutPageVanilla component should renders correctly with shipping 1`] = `
<Fragment>
  <Styled(CnCTemplate)
    isCheckoutView={true}
    isConfirmationPage={false}
    leftSection={[Function]}
    marginTop={true}
    orderLedgerAfterView={false}
    pageCategory="shipping"
    showLeftSection={true}
  />
</Fragment>
`;
